# ethASL

.claude/: settings.local.json
aura/: .gitignore  README.md  pyproject.toml
aura/src/aura/: agent.py  main.py  parser.py  tools.py
inspAI/: README.md
inspAI/mobile/: README.md  app.json  metro.config.js  package-lock.json  package.json
inspAI/mobile/app/(tabs)/: _layout.tsx  explore.tsx  index.tsx
inspAI/mobile/app/inspection/: [id].tsx
inspAI/mobile/patches/: expo-pdf-text-extract+1.0.0.patch
